# serde_qs

./: .travis.yml  CHANGELOG.md  CHANGES.md  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: benchmarks.yml  ci.yml
benches/: README.md  serde_qs_benchmarks.rs
examples/: csv_vectors.rs  introduction.rs  profile_deser.rs  profile_ser.rs
src/: actix.rs  actix2.rs  axum.rs  config.rs  de.rs  error.rs  helpers.rs  lib.rs  ser.rs  utils.rs  warp.rs  web.rs
src/de/: mod.rs  parse.rs  string_parser.rs
src/de/parse/: decode.rs
src/ser/: encode.rs  key.rs  mod.rs  part.rs  value.rs
tests/: test_actix.rs  test_axum.rs  test_chrono.rs  test_deserialize.rs  test_regression.rs  test_roundtrip.rs  test_serialize.rs  test_warp.rs
tests/snapshots/: adjacently_tagged_enum-2.snap  adjacently_tagged_enum-3.snap  adjacently_tagged_enum-4.snap  adjacently_tagged_enum-5.snap  adjacently_tagged_enum-6.snap  adjacently_tagged_enum-7.snap  adjacently_tagged_enum-8.snap  adjacently_tagged_enum.snap  adjacently_tagged_enum@form-2.snap  adjacently_tagged_enum@form-3.snap  adjacently_tagged_enum@form-4.snap  adjacently_tagged_enum@form.snap  adjacently_tagged_enum@query-2.snap  adjacently_tagged_enum@query-3.snap  adjacently_tagged_enum@query-4.snap  adjacently_tagged_enum@query.snap  alias_fields-2.snap  alias_fields.snap  alias_fields@form.snap  alias_fields@query.snap  all_empty_collections-2.snap  all_empty_collections.snap  all_empty_collections@form.snap  all_empty_collections@query.snap  array_types-2.snap  array_types.snap  array_types@form.snap  array_types@query.snap  basic_enum_types-2.snap  basic_enum_types.snap  basic_enum_types@form.snap  basic_enum_types@query.snap  btree_map_types-2.snap  btree_map_types.snap  btree_map_types@form.snap  btree_map_types@query.snap  bytes_types-2.snap  bytes_types.snap  bytes_types@form.snap  bytes_types@query.snap  (+235 more)
